--- a/targets/nuttx-stm32f4/Makefile
+++ b/targets/nuttx-stm32f4/Makefile
@@ -30,10 +30,10 @@ JERRYSCRIPT_ROOT_DIR ?= ../../../jerryscript
 CFLAGS += -std=c99
 CFLAGS += -I$(JERRYSCRIPT_ROOT_DIR)/jerry-core/include
 CFLAGS += -I$(JERRYSCRIPT_ROOT_DIR)/jerry-ext/include
-CFLAGS += -I$(JERRYSCRIPT_ROOT_DIR)/jerry-libm/include
+CFLAGS += -I$(JERRYSCRIPT_ROOT_DIR)/jerry-math/include
 
 # These libs should be copied from the JerryScript project.
-LIBS = libjerry-core.a libjerry-ext.a libjerry-libm.a
+LIBS = libjerry-core.a libjerry-ext.a libjerry-math.a
 
 APPNAME = jerry
 ASRCS = setjmp.S
