--- a/targets/particle/Makefile.particle
+++ b/targets/particle/Makefile.particle
@@ -45,7 +45,7 @@ jerrycore:
 	 -DCMAKE_C_COMPILER_WORKS=TRUE \
 	 -DENABLE_LTO=ON \
 	 -DENABLE_ALL_IN_ONE=OFF \
-	 -DJERRY_LIBM=OFF \
+	 -DJERRY_MATH=OFF \
 	 -DJERRY_CMDLINE=OFF \
 	 -DJERRY_PROFILE=minimal \
 	 -DENABLE_STRIP=OFF \
