--- a/targets/esp8266/Makefile.esp8266
+++ b/targets/esp8266/Makefile.esp8266
@@ -49,7 +49,7 @@ jerry:
 	 -DCMAKE_C_COMPILER=xtensa-lx106-elf-gcc \
 	 -DCMAKE_C_COMPILER_WORKS=TRUE \
 	 -DENABLE_LTO=OFF \
-	 -DENABLE_ALL_IN_ONE=ON \
+	 -DENABLE_AMALGAM=ON \
 	 -DJERRY_MATH=ON \
 	 -DJERRY_CMDLINE=OFF \
 	 -DJERRY_PROFILE="es5.1" \
