Remove file(GLOB ...) usage from CMakeLists.txt
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -122,20 +122,191 @@ set(INCLUDE_CORE_PRIVATE ${INCLUDE_CORE_PRIVATE} PARENT_SCOPE) # for tests/unit-
 
 # Sources
 # Jerry core
-file(GLOB SOURCE_CORE_FILES
-     api/*.c
-     debugger/*.c
-     ecma/base/*.c
-     ecma/builtin-objects/*.c
-     ecma/builtin-objects/typedarray/*.c
-     ecma/operations/*.c
-     jcontext/*.c
-     jmem/*.c
-     jrt/*.c
-     lit/*.c
-     parser/js/*.c
-     parser/regexp/*.c
-     vm/*.c)
+set(SOURCE_CORE_FILES
+  api/jerry-debugger-transport.c
+  api/jerry-debugger.c
+  api/jerry-snapshot.c
+  api/jerry.c
+  debugger/debugger.c
+  ecma/base/ecma-alloc.c
+  ecma/base/ecma-gc.c
+  ecma/base/ecma-helpers-collection.c
+  ecma/base/ecma-helpers-conversion.c
+  ecma/base/ecma-helpers-errol.c
+  ecma/base/ecma-helpers-external-pointers.c
+  ecma/base/ecma-helpers-number.c
+  ecma/base/ecma-helpers-string.c
+  ecma/base/ecma-helpers-value.c
+  ecma/base/ecma-helpers.c
+  ecma/base/ecma-init-finalize.c
+  ecma/base/ecma-lcache.c
+  ecma/base/ecma-literal-storage.c
+  ecma/base/ecma-module.c
+  ecma/base/ecma-property-hashmap.c
+  ecma/builtin-objects/ecma-builtin-array-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-array-prototype-unscopables.c
+  ecma/builtin-objects/ecma-builtin-array-prototype.c
+  ecma/builtin-objects/ecma-builtin-array.c
+  ecma/builtin-objects/ecma-builtin-arraybuffer-prototype.c
+  ecma/builtin-objects/ecma-builtin-arraybuffer.c
+  ecma/builtin-objects/ecma-builtin-async-function-prototype.c
+  ecma/builtin-objects/ecma-builtin-async-function.c
+  ecma/builtin-objects/ecma-builtin-async-generator-function.c
+  ecma/builtin-objects/ecma-builtin-async-generator-prototype.c
+  ecma/builtin-objects/ecma-builtin-async-generator.c
+  ecma/builtin-objects/ecma-builtin-async-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-bigint-prototype.c
+  ecma/builtin-objects/ecma-builtin-bigint.c
+  ecma/builtin-objects/ecma-builtin-boolean-prototype.c
+  ecma/builtin-objects/ecma-builtin-boolean.c
+  ecma/builtin-objects/ecma-builtin-dataview-prototype.c
+  ecma/builtin-objects/ecma-builtin-dataview.c
+  ecma/builtin-objects/ecma-builtin-date-prototype.c
+  ecma/builtin-objects/ecma-builtin-date.c
+  ecma/builtin-objects/ecma-builtin-error-prototype.c
+  ecma/builtin-objects/ecma-builtin-error.c
+  ecma/builtin-objects/ecma-builtin-evalerror-prototype.c
+  ecma/builtin-objects/ecma-builtin-evalerror.c
+  ecma/builtin-objects/ecma-builtin-function-prototype.c
+  ecma/builtin-objects/ecma-builtin-function.c
+  ecma/builtin-objects/ecma-builtin-generator-function.c
+  ecma/builtin-objects/ecma-builtin-generator-prototype.c
+  ecma/builtin-objects/ecma-builtin-generator.c
+  ecma/builtin-objects/ecma-builtin-global.c
+  ecma/builtin-objects/ecma-builtin-handlers.c
+  ecma/builtin-objects/ecma-builtin-helpers-date.c
+  ecma/builtin-objects/ecma-builtin-helpers-error.c
+  ecma/builtin-objects/ecma-builtin-helpers-json.c
+  ecma/builtin-objects/ecma-builtin-helpers-sort.c
+  ecma/builtin-objects/ecma-builtin-helpers.c
+  ecma/builtin-objects/ecma-builtin-intrinsic.c
+  ecma/builtin-objects/ecma-builtin-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-json.c
+  ecma/builtin-objects/ecma-builtin-map-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-map-prototype.c
+  ecma/builtin-objects/ecma-builtin-map.c
+  ecma/builtin-objects/ecma-builtin-math.c
+  ecma/builtin-objects/ecma-builtin-number-prototype.c
+  ecma/builtin-objects/ecma-builtin-number.c
+  ecma/builtin-objects/ecma-builtin-object-prototype.c
+  ecma/builtin-objects/ecma-builtin-object.c
+  ecma/builtin-objects/ecma-builtin-promise-prototype.c
+  ecma/builtin-objects/ecma-builtin-promise.c
+  ecma/builtin-objects/ecma-builtin-proxy.c
+  ecma/builtin-objects/ecma-builtin-rangeerror-prototype.c
+  ecma/builtin-objects/ecma-builtin-rangeerror.c
+  ecma/builtin-objects/ecma-builtin-referenceerror-prototype.c
+  ecma/builtin-objects/ecma-builtin-referenceerror.c
+  ecma/builtin-objects/ecma-builtin-reflect.c
+  ecma/builtin-objects/ecma-builtin-regexp-prototype.c
+  ecma/builtin-objects/ecma-builtin-regexp.c
+  ecma/builtin-objects/ecma-builtin-set-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-set-prototype.c
+  ecma/builtin-objects/ecma-builtin-set.c
+  ecma/builtin-objects/ecma-builtin-string-iterator-prototype.c
+  ecma/builtin-objects/ecma-builtin-string-prototype.c
+  ecma/builtin-objects/ecma-builtin-string.c
+  ecma/builtin-objects/ecma-builtin-symbol-prototype.c
+  ecma/builtin-objects/ecma-builtin-symbol.c
+  ecma/builtin-objects/ecma-builtin-syntaxerror-prototype.c
+  ecma/builtin-objects/ecma-builtin-syntaxerror.c
+  ecma/builtin-objects/ecma-builtin-type-error-thrower.c
+  ecma/builtin-objects/ecma-builtin-typeerror-prototype.c
+  ecma/builtin-objects/ecma-builtin-typeerror.c
+  ecma/builtin-objects/ecma-builtin-urierror-prototype.c
+  ecma/builtin-objects/ecma-builtin-urierror.c
+  ecma/builtin-objects/ecma-builtin-weakmap-prototype.c
+  ecma/builtin-objects/ecma-builtin-weakmap.c
+  ecma/builtin-objects/ecma-builtin-weakset-prototype.c
+  ecma/builtin-objects/ecma-builtin-weakset.c
+  ecma/builtin-objects/ecma-builtins.c
+  ecma/builtin-objects/typedarray/ecma-builtin-bigint64array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-bigint64array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-biguint64array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-biguint64array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-float32array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-float32array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-float64array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-float64array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int16array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int16array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int32array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int32array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int8array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-int8array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-typedarray-helpers.c
+  ecma/builtin-objects/typedarray/ecma-builtin-typedarray-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-typedarray.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint16array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint16array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint32array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint32array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint8array-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint8array.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint8clampedarray-prototype.c
+  ecma/builtin-objects/typedarray/ecma-builtin-uint8clampedarray.c
+  ecma/operations/ecma-arguments-object.c
+  ecma/operations/ecma-array-object.c
+  ecma/operations/ecma-arraybuffer-object.c
+  ecma/operations/ecma-async-generator-object.c
+  ecma/operations/ecma-big-uint.c
+  ecma/operations/ecma-bigint-object.c
+  ecma/operations/ecma-bigint.c
+  ecma/operations/ecma-boolean-object.c
+  ecma/operations/ecma-comparison.c
+  ecma/operations/ecma-container-object.c
+  ecma/operations/ecma-conversion.c
+  ecma/operations/ecma-dataview-object.c
+  ecma/operations/ecma-eval.c
+  ecma/operations/ecma-exceptions.c
+  ecma/operations/ecma-function-object.c
+  ecma/operations/ecma-get-put-value.c
+  ecma/operations/ecma-iterator-object.c
+  ecma/operations/ecma-jobqueue.c
+  ecma/operations/ecma-lex-env.c
+  ecma/operations/ecma-number-arithmetic.c
+  ecma/operations/ecma-number-object.c
+  ecma/operations/ecma-objects-general.c
+  ecma/operations/ecma-objects.c
+  ecma/operations/ecma-promise-object.c
+  ecma/operations/ecma-proxy-object.c
+  ecma/operations/ecma-reference.c
+  ecma/operations/ecma-regexp-object.c
+  ecma/operations/ecma-string-object.c
+  ecma/operations/ecma-symbol-object.c
+  ecma/operations/ecma-typedarray-object.c
+  jcontext/jcontext.c
+  jmem/jmem-allocator.c
+  jmem/jmem-heap.c
+  jmem/jmem-poolman.c
+  jrt/jrt-fatals.c
+  lit/lit-char-helpers.c
+  lit/lit-magic-strings.c
+  lit/lit-strings.c
+  parser/js/byte-code.c
+  parser/js/common.c
+  parser/js/js-lexer.c
+  parser/js/js-parser-expr.c
+  parser/js/js-parser-mem.c
+  parser/js/js-parser-module.c
+  parser/js/js-parser-statm.c
+  parser/js/js-parser-tagged-template-literal.c
+  parser/js/js-parser-util.c
+  parser/js/js-parser.c
+  parser/js/js-scanner-ops.c
+  parser/js/js-scanner-util.c
+  parser/js/js-scanner.c
+  parser/regexp/re-bytecode.c
+  parser/regexp/re-compiler.c
+  parser/regexp/re-parser.c
+  vm/opcodes-ecma-arithmetics.c
+  vm/opcodes-ecma-bitwise.c
+  vm/opcodes-ecma-relational-equality.c
+  vm/opcodes.c
+  vm/vm-stack.c
+  vm/vm-utils.c
+  vm/vm.c
+)
 
 # Amalgamated JerryScript source/header build.
 #  The process will create the following files:
@@ -145,7 +316,157 @@ file(GLOB SOURCE_CORE_FILES
 if(ENABLE_AMALGAM)
 
   # Create single C/H file
-  file(GLOB HEADER_CORE_FILES *.h)
+  set(HEADER_CORE_FILES
+    api/jerry-snapshot.h
+    debugger/debugger.h
+    ecma/base/ecma-alloc.h
+    ecma/base/ecma-gc.h
+    ecma/base/ecma-globals.h
+    ecma/base/ecma-helpers.h
+    ecma/base/ecma-init-finalize.h
+    ecma/base/ecma-lcache.h
+    ecma/base/ecma-literal-storage.h
+    ecma/base/ecma-module.h
+    ecma/base/ecma-property-hashmap.h
+    ecma/builtin-objects/ecma-builtin-arraybuffer.inc.h
+    ecma/builtin-objects/ecma-builtin-arraybuffer-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-array.inc.h
+    ecma/builtin-objects/ecma-builtin-array-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-array-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-array-prototype-unscopables.inc.h
+    ecma/builtin-objects/ecma-builtin-async-function.inc.h
+    ecma/builtin-objects/ecma-builtin-async-function-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-async-generator-function.inc.h
+    ecma/builtin-objects/ecma-builtin-async-generator.inc.h
+    ecma/builtin-objects/ecma-builtin-async-generator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-async-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-bigint.inc.h
+    ecma/builtin-objects/ecma-builtin-bigint-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-boolean.inc.h
+    ecma/builtin-objects/ecma-builtin-boolean-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-dataview.inc.h
+    ecma/builtin-objects/ecma-builtin-dataview-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-date.inc.h
+    ecma/builtin-objects/ecma-builtin-date-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-error.inc.h
+    ecma/builtin-objects/ecma-builtin-error-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-evalerror.inc.h
+    ecma/builtin-objects/ecma-builtin-evalerror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-function.inc.h
+    ecma/builtin-objects/ecma-builtin-function-prototype.h
+    ecma/builtin-objects/ecma-builtin-function-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-generator-function.inc.h
+    ecma/builtin-objects/ecma-builtin-generator.inc.h
+    ecma/builtin-objects/ecma-builtin-generator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-global.inc.h
+    ecma/builtin-objects/ecma-builtin-handlers.h
+    ecma/builtin-objects/ecma-builtin-handlers.inc.h
+    ecma/builtin-objects/ecma-builtin-helpers.h
+    ecma/builtin-objects/ecma-builtin-helpers-macro-defines.inc.h
+    ecma/builtin-objects/ecma-builtin-helpers-macro-undefs.inc.h
+    ecma/builtin-objects/ecma-builtin-internal-routines-template.inc.h
+    ecma/builtin-objects/ecma-builtin-intrinsic.inc.h
+    ecma/builtin-objects/ecma-builtin-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-json.inc.h
+    ecma/builtin-objects/ecma-builtin-map.inc.h
+    ecma/builtin-objects/ecma-builtin-map-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-map-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-math.inc.h
+    ecma/builtin-objects/ecma-builtin-number.inc.h
+    ecma/builtin-objects/ecma-builtin-number-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-object.h
+    ecma/builtin-objects/ecma-builtin-object.inc.h
+    ecma/builtin-objects/ecma-builtin-object-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-promise.inc.h
+    ecma/builtin-objects/ecma-builtin-promise-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-proxy.inc.h
+    ecma/builtin-objects/ecma-builtin-rangeerror.inc.h
+    ecma/builtin-objects/ecma-builtin-rangeerror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-referenceerror.inc.h
+    ecma/builtin-objects/ecma-builtin-referenceerror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-reflect.inc.h
+    ecma/builtin-objects/ecma-builtin-regexp.inc.h
+    ecma/builtin-objects/ecma-builtin-regexp-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-set.inc.h
+    ecma/builtin-objects/ecma-builtin-set-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-set-prototype.inc.h
+    ecma/builtin-objects/ecma-builtins.h
+    ecma/builtin-objects/ecma-builtins.inc.h
+    ecma/builtin-objects/ecma-builtins-internal.h
+    ecma/builtin-objects/ecma-builtin-string.inc.h
+    ecma/builtin-objects/ecma-builtin-string-iterator-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-string-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-symbol.inc.h
+    ecma/builtin-objects/ecma-builtin-symbol-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-syntaxerror.inc.h
+    ecma/builtin-objects/ecma-builtin-syntaxerror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-typeerror.inc.h
+    ecma/builtin-objects/ecma-builtin-typeerror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-type-error-thrower.inc.h
+    ecma/builtin-objects/ecma-builtin-urierror.inc.h
+    ecma/builtin-objects/ecma-builtin-urierror-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-weakmap.inc.h
+    ecma/builtin-objects/ecma-builtin-weakmap-prototype.inc.h
+    ecma/builtin-objects/ecma-builtin-weakset.inc.h
+    ecma/builtin-objects/ecma-builtin-weakset-prototype.inc.h
+    ecma/operations/ecma-arguments-object.h
+    ecma/operations/ecma-arraybuffer-object.h
+    ecma/operations/ecma-array-object.h
+    ecma/operations/ecma-async-generator-object.h
+    ecma/operations/ecma-bigint.h
+    ecma/operations/ecma-bigint-object.h
+    ecma/operations/ecma-big-uint.h
+    ecma/operations/ecma-boolean-object.h
+    ecma/operations/ecma-comparison.h
+    ecma/operations/ecma-container-object.h
+    ecma/operations/ecma-conversion.h
+    ecma/operations/ecma-dataview-object.h
+    ecma/operations/ecma-eval.h
+    ecma/operations/ecma-exceptions.h
+    ecma/operations/ecma-function-object.h
+    ecma/operations/ecma-iterator-object.h
+    ecma/operations/ecma-jobqueue.h
+    ecma/operations/ecma-lex-env.h
+    ecma/operations/ecma-number-arithmetic.h
+    ecma/operations/ecma-number-object.h
+    ecma/operations/ecma-objects-general.h
+    ecma/operations/ecma-objects.h
+    ecma/operations/ecma-promise-object.h
+    ecma/operations/ecma-proxy-object.h
+    ecma/operations/ecma-reference.h
+    ecma/operations/ecma-regexp-object.h
+    ecma/operations/ecma-string-object.h
+    ecma/operations/ecma-symbol-object.h
+    ecma/operations/ecma-typedarray-object.h
+    include/jerryscript-compiler.h
+    include/jerryscript-core.h
+    include/jerryscript-debugger.h
+    include/jerryscript-debugger-transport.h
+    include/jerryscript.h
+    include/jerryscript-port.h
+    include/jerryscript-snapshot.h
+    jcontext/jcontext.h
+    jmem/jmem-allocator-internal.h
+    jmem/jmem.h
+    jrt/jrt-bit-fields.h
+    jrt/jrt.h
+    jrt/jrt-libc-includes.h
+    jrt/jrt-types.h
+    lit/lit-char-helpers.h
+    lit/lit-globals.h
+    lit/lit-magic-strings.h
+    lit/lit-magic-strings.inc.h
+    lit/lit-strings.h
+    lit/lit-unicode-conversions.inc.h
+    lit/lit-unicode-conversions-sup.inc.h
+    lit/lit-unicode-folding.inc.h
+    lit/lit-unicode-ranges.inc.h
+    lit/lit-unicode-ranges-sup.inc.h
+    vm/opcodes.h
+    vm/vm-defines.h
+    vm/vm.h
+    vm/vm-stack.h
+  )
 
   # Generated files
   set(AMALGAM_CORE_C "${CMAKE_BINARY_DIR}/amalgam/jerryscript.c")
