--- a/tests/unit-doc/CMakeLists.txt
+++ b/tests/unit-doc/CMakeLists.txt
@@ -17,7 +17,25 @@ project (unit-doc C)
 find_package(PythonInterp REQUIRED)
 
 set(GEN_DOCTEST "${CMAKE_SOURCE_DIR}/tools/gen-doctest.py")
-file(GLOB DOC_FILES "${CMAKE_SOURCE_DIR}/docs/*.md")
+set(DOC_FILES
+  "${CMAKE_SOURCE_DIR}/docs/00.GETTING-STARTED.md"
+  "${CMAKE_SOURCE_DIR}/docs/01.CONFIGURATION.md"
+  "${CMAKE_SOURCE_DIR}/docs/02.API-REFERENCE.md"
+  "${CMAKE_SOURCE_DIR}/docs/03.API-EXAMPLE.md"
+  "${CMAKE_SOURCE_DIR}/docs/04.INTERNALS.md"
+  "${CMAKE_SOURCE_DIR}/docs/05.PORT-API.md"
+  "${CMAKE_SOURCE_DIR}/docs/06.REFERENCE-COUNTING.md"
+  "${CMAKE_SOURCE_DIR}/docs/07.DEBUGGER.md"
+  "${CMAKE_SOURCE_DIR}/docs/08.CODING-STANDARDS.md"
+  "${CMAKE_SOURCE_DIR}/docs/09.EXT-REFERENCE-ARG.md"
+  "${CMAKE_SOURCE_DIR}/docs/10.EXT-REFERENCE-HANDLER.md"
+  "${CMAKE_SOURCE_DIR}/docs/11.EXT-REFERENCE-AUTORELEASE.md"
+  "${CMAKE_SOURCE_DIR}/docs/12.EXT-REFERENCE-MODULE.md"
+  "${CMAKE_SOURCE_DIR}/docs/13.DEBUGGER-TRANSPORT.md"
+  "${CMAKE_SOURCE_DIR}/docs/14.EXT-REFERENCE-HANDLE-SCOPE.md"
+  "${CMAKE_SOURCE_DIR}/docs/15.MODULE-SYSTEM.md"
+  "${CMAKE_SOURCE_DIR}/docs/16.MIGRATION-GUIDE.md"
+)
 
 if(NOT (${CMAKE_C_COMPILER_ID} STREQUAL MSVC))
   set(COMPILE_FLAGS_DOCTEST "-Wno-unused-parameter -Wno-unused-function -Wno-unused-variable")
