Farewell to Travis CI
Travis CI became very slow lately. Most of the jobs have already
been moved to GH Actions. This commit finishes the migration.

- IRC notification is adapted (result of jobs is not reported).
- Sonar integration is dropped without replacement, as its GH
  Action does not support C projects.
- Coverity Scan integration is dropped without replacement as it
  has no GH Action at all.

JerryScript-DCO-1.0-Signed-off-by: Akos Kiss akiss@inf.u-szeged.hu

--- a/.github/workflows/gh-actions.yml
+++ b/.github/workflows/gh-actions.yml
@@ -207,3 +207,16 @@ jobs:
           python-version: '2.7' # needed due to ESP8266_RTOS_SDK/tools/gen_appbin.py
       - run: make -f ./targets/esp8266/Makefile.travis install-noapt
       - run: make -f ./targets/esp8266/Makefile.travis script
+
+  Notification:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: rectalogic/notify-irc@v1
+        if: github.event_name == 'push' && github.repository == 'jerryscript-project/jerryscript'
+        with:
+          channel: '#jerryscript'
+          nickname: jerryscript-notification
+          message: |
+            @${{ github.actor }}: ${{ github.repository }} (${{ github.ref }}#${{ github.sha }})
+            ${{ join(github.event.commits.*.message) }}
+            ${{ github.event.compare }}
